registration form in place; need to get express backend in place

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/register">Register</a></li>
               <li>
             </ul>
           </div>
@@ -56,7 +56,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> by Benjamin Downs</p>
+        <p><span class="glyphicon glyphicon-copyright-mark"></span> Benjamin Downs, 2016</p>
       </div>
     </div>
 
@@ -89,6 +89,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/register.js"></script>
+        <script src="scripts/controllers/dashboard.js"></script>
         <!-- endbuild -->
 </body>
 </html>
